[package]
name = "ordiscan"
version = "0.1.0"
edition = "2021"
authors = ["Rahul <rahulkp220@gmail.com>"]
description = "Ordiscan API Wrapper"
readme = "README.md"
repository = "https://github.com/rahulkp220/ordiscan"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "api", "api wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
url = "2.5.0"
